lol i did so much code second try commit first one got screwed by intellij code analysis second try vas aborted by fucking maven :( i thought i could just run publishToLocalMaven and then include mavenLocal, hate it got command member MentionArgumentType working added a lot of stuff to GUI the only common files of python and java versions are configs but that's gonna go too probs now there's a quokka in the GUI (all hail quokka)

--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,21 @@ logs/*
 python/logs/*
 private/*
 */.vscode
+/test/**
 .vscode/*
 .idea/**
 tests.py
 python/chatbridge.py
 saves/*
 **/__pycache__/**
+hs_err_pid**
+/java/build/**
+**/tmp/**
+**/.gradle/**
 /java/.gradle/6.3/**
 /java/.gradle/6.5/**
 /java/build/classes/**
+/java/out/**
 /java/build/resources/**
 /java/.gradle/checksums/**
 /java/.gradle/vcs-1/gc.properties
