--- a/java/build.gradle
+++ b/java/build.gradle
@@ -6,20 +6,23 @@ group 'here.lenrik'
 version '0.0.0a'
 
 repositories {
+    mavenLocal() // here's custom build of com.mojang:brigadier
+    // build sources can be found here https://github.com/Mojang/brigadier/pull/77
     mavenCentral()
     jcenter()
-    maven {
-        url "https://libraries.minecraft.net"
+    flatDir {
+        dir '/home/tent/projects/brigadier/build/libs'
     }
 }
 
 dependencies {
-    compile 'com.mojang:brigadier:+'
+    compile 'com.mogang:brigadier:+'
+    compile 'com.google.guava:guava:+' // somehov i lost it?
     compile 'org.apache.logging.log4j:log4j-core:+'
     compile 'org.apache.logging.log4j:log4j-api:+'
+    compile 'org.slf4j:slf4j-jdk14:+'
     compile 'com.google.code.gson:gson:+'
     compile 'net.dv8tion:JDA:+'
-//    compile 'ch.qos.logback:logback-classic:1.2.3'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
