--- a/java/build.gradle
+++ b/java/build.gradle
@@ -1,28 +1,29 @@
 plugins {
-    id 'java'
+	id 'java'
 }
 
 group 'here.lenrik'
 version '0.0.0a'
 
 repositories {
-    mavenLocal() // here's custom build of com.mojang:brigadier
-    // build sources can be found here https://github.com/Mojang/brigadier/pull/77
-    mavenCentral()
-    jcenter()
-    flatDir {
-        dir '/home/tent/projects/brigadier/build/libs'
-    }
+	mavenLocal() // here's custom build of com.mojang:brigadier
+	// build sources can be found here https://github.com/Mojang/brigadier/pull/77
+	mavenCentral()
+	jcenter()
+	flatDir {
+		dir '/home/tent/projects/brigadier/build/libs'
+	}
 }
 
 dependencies {
-    compile 'com.mogang:brigadier:+'
-    compile 'com.google.guava:guava:+' // somehov i lost it?
-    compile 'org.apache.logging.log4j:log4j-core:+'
-    compile 'org.apache.logging.log4j:log4j-api:+'
-    compile 'org.slf4j:slf4j-jdk14:+'
-    compile 'com.google.code.gson:gson:+'
-    compile 'net.dv8tion:JDA:+'
+	compile 'black.ninia:jep:+'
+	compile 'com.mogang:brigadier:+'
+	compile 'com.google.guava:guava:+' // somehov i lost it?
+	compile 'org.apache.logging.log4j:log4j-core:+'
+	compile 'org.apache.logging.log4j:log4j-api:+'
+	compile 'org.slf4j:slf4j-jdk14:+'
+	compile 'com.google.code.gson:gson:+'
+	compile 'net.dv8tion:JDA:+'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+	testCompile group: 'junit', name: 'junit', version: '4.12'
 }
